# Campusmate-Scraping-for-Gifu-University

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml  quickstart.py  scrapeEvents.py
src/campusmatescraping/: __init__.py  daily_events.py  event_info.py  main.py  quickstart.py  scrapeEvents.py  scrape_events.py
src/gifu_uni_scraper/: main.py  quickstart.py  scrape_events.py
