[project]
name = "campusmatescraping"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tanashou", email = "tanashou0210@gmail.com" }
]
dependencies = [
    "selenium==4.19.0",
    "google-api-python-client==2.125.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/campusmatescraping"]
